--- a/tabelaweb/pom.xml
+++ b/tabelaweb/pom.xml
@@ -68,6 +68,14 @@
          <failOnMissingWebXml>false</failOnMissingWebXml>
        </configuration>
      </plugin>
+     <plugin>
+       <groupId>org.apache.maven.plugins</groupId>
+       <artifactId>maven-surefire-plugin</artifactId>
+       <version>2.19.1</version>
+       <configuration>
+          <testFailureIgnore>true</testFailureIgnore>
+       </configuration>
+     </plugin>
    </plugins>
- </build> 
+</build> 
 </project>
